src/definitions/elements/list.less
/* ... */
.ui.list .list > .item > i.icon:only-child,
.ui.list > .item > i.icon:only-child {
  display: inline-block;
  vertical-align: @iconVerticalAlign;
}


/* Image */
.ui.list .list > .item > .image,
.ui.list > .item > .image {
  display: table-cell;
  background-color: transparent;
  margin: 0;
  vertical-align: @imageAlign;
}
.ui.list .list > .item > .image:not(:only-child):not(img),
.ui.list > .item > .image:not(:only-child):not(img) {
  padding-right: @imageDistance;
}
.ui.list .list > .item > .image img,
.ui.list > .item > .image img {
  vertical-align: @imageAlign;
}

.ui.list .list > .item > img.image,
.ui.list .list > .item > .image:only-child,
.ui.list > .item > img.image,
.ui.list > .item > .image:only-child {
  display: inline-block;
}

/* Content */
.ui.list .list > .item > .content,
.ui.list > .item > .content {
  line-height: @contentLineHeight;
  color: @contentColor;
}
.ui.list .list > .item > .image + .content,
.ui.list .list > .item > .icon + .content,
.ui.list > .item > .image + .content,
.ui.list > .item > .icon + .content {
  display: table-cell;
  width: 100%;
  padding: 0 0 0 @contentDistance;
  vertical-align: @contentVerticalAlign;
}
.ui.list .list > .item > .loading.icon + .content,
.ui.list > .item > .loading.icon + .content {
  padding-left: e(%("calc(%d + %d)", @iconDistance, @contentDistance));
}
.ui.list .list > .item > img.image + .content,
.ui.list > .item > img.image + .content {
  display: inline-block;
  width: auto;
}
.ui.list .list > .item > .content > .list,
.ui.list > .item > .content > .list {
  margin-left: 0;
  padding-left: 0;
}

/* Header */
.ui.list .list > .item .header,
.ui.list > .item .header {
  display: block;
  margin: 0;
  font-family: @itemHeaderFontFamily;
  font-weight: @itemHeaderFontWeight;
  color: @itemHeaderColor;
}

/* Description */
.ui.list .list > .item .description,
.ui.list > .item .description {
  display: block;
  color: @itemDescriptionColor;
}

/* Child Link */
.ui.list > .item a,
.ui.list .list > .item a {
  cursor: pointer;
}

/* Linking Item */
.ui.list .list > a.item,
.ui.list > a.item {
  cursor: pointer;
  color: @itemLinkColor;
}
.ui.list .list > a.item:hover,
.ui.list > a.item:hover {
  color: @itemLinkHoverColor;
}

/* Linked Item Icons */
.ui.list .list > a.item > i.icon,
.ui.list > a.item > i.icon {
  color: @itemLinkIconColor;
}

/* Header Link */
.ui.list .list > .item a.header,
.ui.list > .item a.header {
  cursor: pointer;
  color: @itemHeaderLinkColor !important;
}
.ui.list .list > .item > a.header:hover,
.ui.list > .item > a.header:hover {
  color: @itemHeaderLinkHoverColor !important;
}

/* Floated Content */
.ui[class*="left floated"].list {
  float: left;
}
.ui[class*="right floated"].list {
  float: right;
}

.ui.list .list > .item [class*="left floated"],
.ui.list > .item [class*="left floated"] {
  float: left;
  margin: @leftFloatMargin;
}
.ui.list .list > .item [class*="right floated"],
.ui.list > .item [class*="right floated"] {
  float: right;
  margin: @rightFloatMargin;
}

/*******************************
            Coupling
*******************************/

.ui.menu .ui.list > .item,
.ui.menu .ui.list .list > .item {
  display: list-item;
  table-layout: fixed;
  background-color: transparent;

  list-style-type: @listStyleType;
  list-style-position: @listStylePosition;

  padding: @itemVerticalPadding @itemHorizontalPadding;
  line-height: @itemLineHeight;
}
.ui.menu .ui.list .list > .item:before,
.ui.menu .ui.list > .item:before {
  border: none;
  background: none;
}
.ui.menu .ui.list .list > .item:first-child,
.ui.menu .ui.list > .item:first-child {
  padding-top: 0;
}
.ui.menu .ui.list .list > .item:last-child,
.ui.menu .ui.list > .item:last-child {
  padding-bottom: 0;
}


/*******************************
            Types
*******************************/

/*-------------------
      Horizontal
--------------------*/

.ui.horizontal.list {
  display: inline-block;
  font-size: 0;
}
.ui.horizontal.list > .item {
  display: inline-block;
  margin-left: @horizontalSpacing;
  font-size: 1rem;
}
.ui.horizontal.list:not(.celled) > .item:first-child {
  margin-left: 0 !important;
  padding-left: 0 !important;
}
.ui.horizontal.list .list:not(.icon) {
  padding-left: 0;
  padding-bottom: 0;
}

.ui.horizontal.list > .item > .image,
.ui.horizontal.list .list > .item > .image,
.ui.horizontal.list > .item > .icon,
.ui.horizontal.list .list > .item > .icon,
.ui.horizontal.list > .item > .content,
.ui.horizontal.list .list > .item > .content {
  vertical-align: @horizontalVerticalAlign;
}

/* Padding on all elements */
.ui.horizontal.list > .item:first-child,
.ui.horizontal.list > .item:last-child {
  padding-top: @itemVerticalPadding;
  padding-bottom: @itemVerticalPadding;
}

/* Horizontal List */
.ui.horizontal.list > .item > i.icon {
  margin: 0;
  padding: 0 @horizontalIconDistance 0 0;
}
.ui.horizontal.list > .item > .image + .content,
.ui.horizontal.list > .item > .icon,
.ui.horizontal.list > .item > .icon + .content {
  float: none;
  display: inline-block;
  width: auto;
}
.ui.horizontal.list > .item > .image {
  display:inline-block;
}

/*******************************
             States
*******************************/

/*-------------------
       Disabled
--------------------*/

.ui.list .list > .disabled.item,
.ui.list > .disabled.item {
  pointer-events: none;
  color: @disabledColor !important;
}
.ui.inverted.list .list > .disabled.item,
.ui.inverted.list > .disabled.item {
  color: @invertedDisabledColor !important;
}

/*-------------------
        Hover
--------------------*/

.ui.list .list > a.item:hover > .icon,
.ui.list > a.item:hover > .icon {
  color: @itemLinkIconHoverColor;
}


/*******************************
           Variations
*******************************/

/*-------------------
       Inverted
--------------------*/

.ui.inverted.list .list > a.item > .icon,
.ui.inverted.list > a.item > .icon {
  color: @invertedIconLinkColor;
}
/* ... */

